2009-02-16  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_class_init): Increased the maximum speed.
	(hildon_pannable_area_get_property),
	(hildon_pannable_area_set_property),
	(hildon_pannable_area_timeout): Added a new low friction mode, it
	allows the user avoid friction when launching the widget fast
	enough. It is interesting to traverse long lists.

2009-02-16  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-stackable-window.c (hildon_stackable_window_class_init)
	(+hildon_stackable_window_delete_event): Ignore delete events if
	the window is not the topmost one.

	Fixes: NB#101698 (Back button long press and delete-event handling)

2009-02-16  Alejandro G. Castro  <alex@igalia.com>

	* src/hildon-pannable-area.c,
	(hildon_pannable_area_motion_notify_cb): Removed the use of the
	gtk-dnd-drag-threshold, it was too big. We have defined our own
	dnd define and set a smaller value: PANNIG_THRESHOLD.

2009-02-16  Alberto Garcia  <agarcia@igalia.com>

	* src/hildon-banner.c (hildon_banner_show_animation): Don't allow
	user-defined icons, use always the default one.

	Fixes: NB#101916 (Do not allow custom icons on animation banner)

2009-02-13  Alejandro G. Castro  <alex@igalia.com>

	This patch was applied before but reverted because it caused
	problems, we have changed the main condition and tested the
	regressions we detected before and they work ok.

        * src/hildon-pannable-area.c,
        (hildon_pannable_area_get_topmost): Added a new parameter to
        filter the the windows that do not include those events. Added
        also a condition when finding the window to filter windows that do
        not ask for those events.
        (hildon_pannable_area_button_press_cb),
        (hildon_pannable_area_button_release_cb),
        (hildon_pannable_get_child_widget_at): Reviewed the call the the
        topmost function, we have added the new parameter.
